hard-gists/d9ef555fb7ef5498c709/run.log
=== Docker Run Log for d9ef555fb7ef5498c709 ===
Started at: Mi 29. Okt 20:28:55 CET 2025

[2025-10-29 20:28:56] START: Running container for d9ef555fb7ef5498c709
[2025-10-29 20:28:56] SUCCESS: Container 59d6612598c7656205cf048cb51c3609689c24389c04f96d3350f0749978b23a started for d9ef555fb7ef5498c709
=== Container logs for d9ef555fb7ef5498c709 ===
  File "/snippet.py", line 56
    print 'Usage: findpdf <TERM> <NUM> [outfile] - search for TERM and download NUM'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d9ef555fb7ef5498c709 ===
[2025-10-29 20:28:58] INFO: Container 59d6612598c7656205cf048cb51c3609689c24389c04f96d3350f0749978b23a has stopped
